updated until row 9

--- a/index.html
+++ b/index.html
@@ -52,10 +52,10 @@
         <td></td>
         <td colspan="2"> <span class="main">*</span><b> Whether he is a Citizen Of India</b>
           <label for="yes" style="padding-left: 80px;">Yes</label>
-          <input type="radio" name="" id="yes">
+          <input type="radio" name="India" id="yes">
 
           <label for="no" style="padding-left: 40px;">No</label>
-          <input type="radio" name="" id="no">
+          <input type="radio" name="India" id="no">
         </td>
       </tr>
       <tr>
@@ -78,14 +78,14 @@
         <td colspan="2">
           <b> Title</b>
           <label for="shri" style="padding-left: 20px;">Shri/mr</label>
-          <input type="radio" name="" id="shri">
+          <input type="radio" name="Prefix" id="shri">
 
           <label for="Smt" style="padding-left: 20px;">Smt/Mrs</label>
-          <input type="radio" name="" id="Smt">
+          <input type="radio" name="Prefix" id="Smt">
 
 
           <label for="Kumari" style="padding-left: 20px;">Kumari/Ms</label>
-          <input type="radio" name="" id="Kumari">
+          <input type="radio" name="Prefix" id="Kumari">
         </td>
       </tr>
 
@@ -210,34 +210,119 @@
         </td>
         <td>
             <span class="main">*</span><span><b>4. Select Parent name which is to be printed on the card.</b></span><br>
-            <p style="color: blue;">(In case on information is provied the PAN card will be issued with the father's name)</p>
+            <p style="color: blue;"><b>(In case on information is provied the PAN card will be issued with the father's name)</b></p>
         </td>
         <td>
-            <label for="father" style="padding-right: 10px;">Father Name</label>
+            <label for="father" style="padding-right: 3px;">Father Name</label>
             <input type="radio" name="a" id="father">
-            <label for="mother" style="padding: 0px 10px 0px 5px">Mother Name</label>
+            <label for="mother" style="padding: 0px 3px 0px 5px">Mother Name</label>
             <input type="radio" name="a" id="mother">
         </td>
       </tr>
       <tr>
         <td style="width:20px;"><input type="checkbox" name="" id=""></td>
         <td>
-            <span class="main">*</span><span><b>5. Date of Birth/Incorporation/Agreement/partnership or Trusr Deed/Formation of Boady of Individuals/Assosiation of Persons</b></span>
+            <span class="main">*</span><span><b>&nbsp;5. Date of Birth/Incorporation/Agreement/partnership<br> or Trusr Deed/Formation of Body of Individuals/<br>Assosiation of Persons</b></span>
         </td>
         <td>
             <div style="display: inline-block;">
                 <label for="Date">DD</label><br>
-                <input type="date" name="" id="Date">
+                <select name="" id="Date">
+                  <option value="">DD</option>
+                    <option value="1">1</option>
+                    <option value="2">2</option>
+                    <option value="3">3</option>
+                    <option value="4">4</option>
+                    <option value="5">5</option>
+                    <option value="6">6</option>
+                    <option value="7">7</option>
+                    <option value="8">8</option>
+                    <option value="9">9</option>
+                    <option value="10">10</option>
+                    <option value="11">11</option>
+                    <option value="12">12</option>
+                    <option value="13">13</option>
+                    <option value="14">14</option>
+                    <option value="15">15</option>
+                    <option value="16">16</option>
+                    <option value="17">17</option>
+                    <option value="18">18</option>
+                    <option value="19">19</option>
+                    <option value="20">20</option>
+                    <option value="21">21</option>
+                    <option value="22">22</option>
+                    <option value="23">23</option>
+                    <option value="24">24</option>
+                    <option value="25">25</option>
+                    <option value="26">26</option>
+                    <option value="27">27</option>
+                    <option value="28">28</option>
+                    <option value="29">29</option>
+                    <option value="30">30</option>
+                    <option value="31">31</option>
+                  </select>
               </div>
               <div style="display: inline-block;">
                 <label for="Month">MM</label><br>
-                <input type="search" name="" id="Month">
+                <select name="" id="Month">
+                  <option value="">MM</option>
+                    <option value="Jan">Jan</option>
+                    <option value="Feb">Feb</option>
+                    <option value="Mar">Mar</option>
+                    <option value="Apr">Apr</option>
+                    <option value="May">May</option>
+                    <option value="Jun">Jun</option>
+                    <option value="Jul">Jul</option>
+                    <option value="Aug">Aug</option>
+                    <option value="Sep">Sep</option>
+                    <option value="Oct">Oct</option>
+                    <option value="Nov">Nov</option>
+                    <option value="Dec">Dec</option>
+                  </select>
               </div>
   
               <div style="display: inline-block;">
                 <label for="Year">YYYY</label><br>
-                <input type="text" name="" id="Year">
+                <input type="text" name="" id="Year" style="width: 50px;">
               </div>
+        </td>
+      </tr>
+      <tr>
+        <td style="width:20px;"><input type="checkbox" name="" id=""></td>
+        <td>
+          <span class="main">*</span><span><b>&nbsp;6. Gender</b></span>
+        </td>
+        <td>
+          <label for="male" style="padding-right: 3px;">Male</label>
+          <input type="radio" name="gen" id="male">
+          <label for="female" style="padding: 0px 3px 0px 5px">Female</label>
+          <input type="radio" name="gen" id="female">
+          <label for="tran" style="padding: 0px 3px 0px 5px">TransGender</label>
+          <input type="radio" name="gen" id="tran">
+        </td>
+      </tr>
+      <tr>
+        <td style="width:20px;"><input type="checkbox" name="" id=""></td>
+        <td colspan="2">
+          <span><b>&nbsp;&nbsp;&nbsp;7. Photo Mismatch</b></span>
+        </td>
+      </tr>
+      <tr>
+        <td style="width:20px;"><input type="checkbox" name="" id=""></td>
+        <td colspan="2">
+          <span><b>&nbsp;&nbsp;&nbsp;8. Signature Mismatch</b></span>
+        </td>
+      </tr>
+      <tr>
+        <td style="width:20px;"><input type="checkbox" name="" id=""></td>
+        <td>
+          <span class="main">*</span><span><b>&nbsp;9. Address for Communication</b></span>
+        </td>
+        <td>
+          <label for="resedential" style="padding: 3px;">Resedential</label>
+          <input type="radio" name="address" id="resedential">
+          <label for="office" style="padding: 0px 3px 0px 15px;">Office</label>
+          <input type="radio" name="address" id="office">
         </td>
       </tr>
     </tbody>
